# par_int_mpi

./: CMakeLists.txt  mpi_info.cpp  mpi_info.hpp  parralel_integral.cpp  parralel_integral.hpp  parralel_integral_mpi.cpp
